feat(index.html): html codes

--- a/index.html
+++ b/index.html
@@ -1,18 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Price Table</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Price Table</title>
+  </head>
+  <body>
+    <div class="pricing-table">
+      <section class="essentials">
+        <div class="inner">
+          <p>PARA VOCÊ COMEÇAR</p>
+          <div class="title-price">
+            <strong class="title">Essentials</strong>
+            <span class="price">R$ <strong>19,97</strong> </span>
+          </div>
+        </div>
 
-  <div class="pricing-table">
-    <section class="essentials">
-      
-    </section>
-  </div>
-</body>
+        <button class="primary">Assinar agora</button>
+
+        <ul>
+          <li>
+            <i></i>
+            <span>Até 3 usuários</span>
+            <i></i>
+          </li>
+        </ul>
+      </section>
+    </div>
+  </body>
 </html>
