feat(index.html): html codes

--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Price Table</title>
   </head>
@@ -22,9 +29,9 @@
 
         <ul>
           <li>
-            <i></i>
+            <i class="ph ph-check"></i>
             <span>Até 3 usuários</span>
-            <i></i>
+            <i class="ph ph-info"></i>
           </li>
         </ul>
       </section>
