feat(style.css): inner styles

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="pricing-table">
       <section class="essentials">
         <div class="inner">
-          <p>PARA VOCÊ COMEÇAR</p>
+          <p>Para você começar</p>
           <div class="title-price">
             <strong class="title">Essentials</strong>
             <span class="price">R$ <strong>19,97</strong> </span>
