feat(style.css): ul li styles

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
               <span>Até 3 usuários</span>
               <i class="ph ph-info"></i>
             </li>
+            <li>
+              <i class="ph ph-check"></i>
+              <span>Até 3 usuários</span>
+              <i class="ph ph-info"></i>
+            </li>
           </ul>
         </div>
       </section>
