feat(style.css): enterprise styles

--- a/index.html
+++ b/index.html
@@ -40,6 +40,27 @@
           </ul>
         </div>
       </section>
+
+      <section class="enterprise">
+        <div class="inner">
+          <p>Para sua empresa</p>
+          <div class="title-price">
+            <strong class="title">Enterprise</strong>
+          </div>
+
+          <button class="primary">Fale com a gente</button>
+
+          <ul>
+            <li>
+              <i class="ph ph-check"></i>
+              <span>
+                Plano customizado especialmente para a necessidade de seu
+                negócio
+              </span>
+            </li>
+          </ul>
+        </div>
+      </section>
     </div>
   </body>
 </html>
