--- a/index.html
+++ b/index.html
@@ -41,6 +41,41 @@
         </div>
       </section>
 
+      <section class="ultimate">
+        <div class="inner">
+          <p>Para você decolar</p>
+          <div class="title-price">
+            <strong class="title">Ultimate</strong>
+            <span class="price">
+              R$ <strong>29,97</strong>
+            </span>
+          </div>
+          <button class="secondary">Assinar agora</button>
+          <ul>
+            <li>
+              <i class="ph ph-check"></i>
+              <span>Usuários ilimitados</span>
+              <i class="ph ph-info"></i>
+            </li>
+            <li>
+              <i class="ph ph-check"></i>
+              <span>Suporte 24/7</span>
+              <i class="ph ph-info"></i>
+            </li>
+            <li>
+              <i class="ph ph-check"></i>
+              <span>CMS Dedicado</span>
+              <i class="ph ph-info"></i>
+            </li>
+            <li>
+              <i class="ph ph-check"></i>
+              <span>Treinamentos</span>
+              <i class="ph ph-info"></i>
+            </li>
+          </ul>
+        </div>
+      </section>
+
       <section class="enterprise">
         <div class="inner">
           <p>Para sua empresa</p>
