feat(style.css): button secondary styles

--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
           <p>Para você decolar</p>
           <div class="title-price">
             <strong class="title">Ultimate</strong>
-            <span class="price">
-              R$ <strong>29,97</strong>
-            </span>
+            <span class="price"> R$ <strong>29,97</strong> </span>
           </div>
           <button class="secondary">Assinar agora</button>
           <ul>
