feat(style.css): making responsive

--- a/index.html
+++ b/index.html
@@ -16,16 +16,14 @@
   </head>
   <body>
     <div class="pricing-table">
-      <section class="essentials">
+      <section class="essentials" style="--delay: 10ms">
         <div class="inner">
           <p>Para você começar</p>
           <div class="title-price">
             <strong class="title">Essentials</strong>
             <span class="price">R$ <strong>19,97</strong> </span>
           </div>
-
           <button class="primary">Assinar agora</button>
-
           <ul>
             <li>
               <i class="ph ph-check"></i>
@@ -34,14 +32,14 @@
             </li>
             <li>
               <i class="ph ph-check"></i>
-              <span>Até 3 usuários</span>
+              <span>Autoatendimento</span>
               <i class="ph ph-info"></i>
             </li>
           </ul>
         </div>
       </section>
 
-      <section class="ultimate">
+      <section class="ultimate" style="--delay: 210ms">
         <div class="inner">
           <p>Para você decolar</p>
           <div class="title-price">
@@ -74,7 +72,7 @@
         </div>
       </section>
 
-      <section class="enterprise">
+      <section class="enterprise" style="--delay: 410ms">
         <div class="inner">
           <p>Para sua empresa</p>
           <div class="title-price">
